# exotica

./: CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  ExoticaTest.cpp  ExoticaTest.h  Property.cpp  Property.h  XMLEncoder.cpp  XMLEncoder.h  corpus.h  exotica.h  marshal.cpp
